Fixes a few design issues on mobile

--- a/packages/styles/src/base/_base.scss
+++ b/packages/styles/src/base/_base.scss
@@ -58,6 +58,10 @@ a {
   border-bottom: 1px solid transparent;
 }
 
+img {
+  max-width: 100%;
+}
+
 .section {
   background: #fff;
   border-radius: 10px;
